feat(ai): document crud
